feat(config): GSON-backed farsight.json + wire into FarsightClient (Phase 6)